# esp32-metrics-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  init-user-db.sh
http-server/: Cargo.toml
http-server/migrations/: 1_create_metrics_table.sql
http-server/src/: main.rs
http-server/web/: index.html
rust-esp32-ota/: Cargo.toml  README.md  build.rs  flash.sh  image.sh  partitions.csv
rust-esp32-ota/src/: lib.rs  main.rs  ota.rs
rust-esp32-std/: Cargo.toml  flash.sh  image.sh
rust-esp32-std/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
