[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
base64 = "0.21.0"
chrono = "0.4.24"
log = "0.4.17"
pretty_env_logger = "0.4.0"
refinery = { version = "0.8.9", features = ["tokio-postgres"] }
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres", "time", "chrono"] }
tokio = { version = "1.28.0", features = ["full"] }
types = { path = "../types" }
